# test_dependabot_subdirs

./: README.md
proj1/: pyproject.toml
proj1/tests/: test_proj1.py
proj2/: pyproject.toml
proj2/tests/: test_proj2.py
